--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ELm example sites</title>
-    <style type="text/css" media="screen" src="style.css"> </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elm Examples Hub</title>
+    <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
-    <h1>Elm example progams</h1>
     <div id="elm-app"></div>
     <script src="elm.js"></script>
     <script>
