removed websocket package and switched to ports :(

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="elm-app"></div>
     <script src="elm.js"></script>
+    <script src="websocket.js"></script>
     <script>
       var app = Elm.Main.init({
         node: document.getElementById("elm-app")
