fixed redundent init in index

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Initialize Elm app and store it in a global variable
-        window.elmApp = Elm.Main.init({
-          node: document.getElementById("elm-app")
-        });
+        //window.elmApp = Elm.Main.init({
+        //  node: document.getElementById("elm-app")
+        //});
         console.log("Elm application initialized successfully");
       });
     </script>
